[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/acc/ProgressBar_light.tscn" type="PackedScene" id=1]
[ext_resource path="res://code/exclamation/Totem.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Totem" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 3 )

[node name="detect_lampe" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_lampe"]
shape = SubResource( 1 )

[node name="ProgressBar" parent="." instance=ExtResource( 1 )]
margin_left = -35.5895
margin_top = 36.3246
margin_right = 40.4105
margin_bottom = 63.3246
max_value = 30.0
[connection signal="body_entered" from="detect_lampe" to="." method="_on_detect_lampe_body_entered"]
[connection signal="body_exited" from="detect_lampe" to="." method="_on_detect_lampe_body_exited"]
